# vof-flow

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: disable_vcpkg_boost.cmake
docs/: CHANGELOG.md  REPRODUCIBILITY.md
docs/scripts/: build_plugin_linux.sh  download_data.py  figure_jet_bounds.py  figure_jet_plic.py  separation_boundaries.py  surface_smoothing.py
src/ParaViewPlugin/: CMakeLists.txt  VofFlow.qrc  VofFlow.xml  paraview.plugin
src/Plic/: CMakeLists.txt  vtk.module  vtkAbstractPlic.cxx  vtkAbstractPlic.h  vtkPlic.cxx  vtkPlic.h  vtkPlic3.cxx  vtkPlic3.h
src/Tools/: CMakeLists.txt  MaxVelocity.cpp  PolyGap.cpp  SeedGrid.cpp  SmoothNormals.cpp
src/VofDataUtils/: CMakeLists.txt  vtk.module
src/VofDataUtils/Grid/: DataInterpolation.cpp  DataInterpolation.h  DomainInfo.cpp  DomainInfo.h  Gradient.cpp  Gradient.h  GridData.h  GridDataSet.h  GridIterator.h  GridTypes.h
src/VofDataUtils/Math/: Vector.h
src/VofDataUtils/Misc/: CgalUtil.h  CgalVariant.h  ListSearch.h  Profiling.h  VofData.h
src/VofDataUtils/Plic/: CachedPlic.h  Plic.cpp  Plic.h  Plic3.cpp  Plic3.h  PlicPolyData.cpp  PlicPolyData.h  PlicUtil.cpp  PlicUtil.h  PolyCell.cpp  PolyCell.h  Polygon3D.cpp  Polygon3D.h
src/VofDataUtils/VtkUtil/: VtkUtilArray.cpp  VtkUtilArray.h  VtkUtilMPI.h  VtkUtilWriter.cpp  VtkUtilWriter.h
src/VofTracking/: Advection.cpp  Advection.h  Boundary.cpp  Boundary.h  CMakeLists.txt  ComponentExtraction.cpp  ComponentExtraction.h  Constants.h  Particles.cpp  Particles.h  Seed.cpp  Seed.h  TimeMeasure.h  Uncertainty.cpp  Uncertainty.h  vtk.module  vtkVofBoundary.cxx  vtkVofBoundary.h  vtkVofMaxVelocity.cxx  vtkVofMaxVelocity.h  vtkVofTracking.cxx  vtkVofTracking.h
